# girafarig

./: CMakeLists.txt  README.md  main.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: GlfwContext.h  IndexBuffer.h  OpenGlContext.h  Shader.h  ShaderProgram.h  Vertex.h  VertexArray.h  VertexBuffer.h  Window.h
include/graphics/buffer/: IndexBuffer.h  VertexArray.h  VertexBuffer.h
include/graphics/context/: OpenGlContext.h
include/graphics/shader/: Shader.h  ShaderProgram.h
include/math/: Matrix.h  Matrix.tpp  Quaternion.h  Vector.h  Vector.tpp  matrix.h  matrix.tpp  vector.h  vector.tpp
include/platform/: GlfwContext.h  Window.h
resource/shader/: FragmentShader.glsl  GeometryShader.glsl  VertexShader.glsl
src/: GlfwContext.cpp  IndexBuffer.cpp  OpenGlContext.cpp  Shader.cpp  ShaderProgram.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/graphics/buffer/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/graphics/context/: OpenGlContext.cpp
src/graphics/shader/: Shader.cpp  ShaderProgram.cpp
src/math/: Matrix.cpp  Quaternion.cpp
src/platform/: GlfwContext.cpp  Window.cpp
